kubernetes/apps/le4db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: le4db
  labels:
    app: le4db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: le4db
  template:
    metadata:
      labels:
        app: le4db
    spec:
      containers:
      - name: le4db
        image: ghcr.io/segre5458/le4db/app:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

        resources:
          limits: 
            cpu: 100m
            memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: le4db-postgres
  labels:
    app: le4db-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: le4db-postgres
  template:
    metadata:
      labels:
        app: le4db-postgres
    spec:
      containers:
      - name: le4db-postgres
        image: ghcr.io/segre5458/le4db/postgres:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        resources:
          limits: 
            cpu: 100m
            memory: 128Mi
