kubernetes/apps/le4db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: le4db
  namespace: flux-system
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: kubernetes-dashboard
    meta.helm.sh/release-namespace: flux-system
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # external-dns.alpha.kubernetes.io/hostname: kubernetes-dashboard.marokiki.net
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: cloudflare-lets-encrypt-le4db
      hosts:
        - le4db.marokiki.net
  rules:
  - host: le4db.marokiki.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: le4db-service
            port:
              number: 80
